--- a/MTG/appsettings.json
+++ b/MTG/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "MTGContext": "Server=(localdb)\\mssqllocaldb;Database=MTGContext-d5d22fe9-2072-4079-86f0-5313d797f80c;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
